--- a/FullCalendar/FullCalendar/ClientApp/src/app/app.component.html
+++ b/FullCalendar/FullCalendar/ClientApp/src/app/app.component.html
@@ -4,8 +4,13 @@
     Welcome to {{ title }}!
   </h1>
 </div>
+<p>Display event : {{displayEvent | json}}</p>
 <div *ngIf="calendarOptions">
-  <ng-fullcalendar #ucCalendar [options]="calendarOptions" (eventClick)="eventClick($event.detail)" (eventDrop)="updateEvent($event.detail)"
-                   (eventResize)="updateEvent($event.detail)" (clickButton)="clickButton($event.detail)"></ng-fullcalendar>
+    <ng-fullcalendar #ucCalendar 
+        [options]="calendarOptions" 
+        (eventClick)="eventClick($event.detail)" 
+        (eventDrop)="updateEvent($event.detail)"
+        (eventResize)="updateEvent($event.detail)" 
+        (clickButton)="clickButton($event.detail)"></ng-fullcalendar>
 </div>
 
