--- a/FullCalendar/FullCalendar/ClientApp/src/app/app.component.css
+++ b/FullCalendar/FullCalendar/ClientApp/src/app/app.component.css
@@ -1,3 +1,20 @@
-p {
-    font-family: Lato;
-  }
+
+.tab-detail {
+  margin: 5%;
+}
+
+.btn-groups {
+  text-align: right;
+}
+
+.btn-groups .btn.btn-primary {
+  margin-left: 1%;
+}
+
+.form-control.time {
+  width: 10%;
+}
+
+.white-space {
+  margin: 0 2%;
+}
